--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "bcrypt": "1.0.2",
         "cfenv":"~1.0.0",
         "express":"4.x",
+        "cors": "^2.8.3",
         "body-parser":"1.x",
         "http-shutdown":"1.2.0",
         "node-red": "0.x",
